# Rewiew

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  LOG.md  README.md  pyproject.toml
.agents/skills/lit-audit/: SKILL.md
.agents/skills/lit-audit/references/: claim-patterns.md
.agents/skills/lit-cite/: SKILL.md
.agents/skills/lit-cite/references/: bib-formats.md
.agents/skills/lit-deregister/: SKILL.md
.agents/skills/lit-draft/: SKILL.md
.agents/skills/lit-gate/: SKILL.md
.agents/skills/lit-gate/references/: gate-thresholds.md
.agents/skills/lit-status/: SKILL.md
.claude/skills/lit-deregister/: SKILL.md
.claude/skills/lit-deregister/references/: ai-patterns.md
.claude/skills/lit-draft/: SKILL.md
.claude/skills/lit-draft/references/: quality-constraints.md
.claude/skills/lit-gate/: SKILL.md
.claude/skills/lit-status/: SKILL.md
config/: README.md  review_topic.yml
scripts/: batch_screen.py  download_sources.py  export_nbib.py  extract_notes.py  pubmed_search.py  review_config.py  select_core_papers.py  sync_extraction_sources.py
