[project]
name = "literature-review"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.104.1",
    "biopython>=1.87",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "pyzotero>=1.12.0",
    "requests>=2.34.2",
]
